# crew-ai

./: README.md  instagram_newsletter.md  news_fetcher.md  news_research.md  pyproject.toml  report.md  resumos.md  video_script.md
db/: chroma.sqlite3
knowledge/: user_preference.txt
src/conteudos_sap/: crew.py  main.py
src/conteudos_sap/config/: agents.yaml  tasks.yaml
src/conteudos_sap/tools/: custom_tool.py
