[project]
name = "conteudos_sap"
version = "0.1.0"
description = "conteudos_sap using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
conteudos_sap = "conteudos_sap.main:run"
run_crew = "conteudos_sap.main:run"
train = "conteudos_sap.main:train"
replay = "conteudos_sap.main:replay"
test = "conteudos_sap.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
